<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background">

    <ImageView
        android:layout_width="330dp"
        android:layout_height="200dp"
        android:src="@drawable/test"/>

    <Button
        android:id="@+id/botonChacarero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded"
        android:text="@string/chacareroNombre"
        android:textColor="@color/texto"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="20dp"/>

    <Button
        android:id="@+id/botonItaliano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/italianoNombre"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/texto"
        android:background="@drawable/btn_rounded"/>

    <Button
        android:id="@+id/botonDiplomatico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diplomaticoNombre"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/texto"
        android:background="@drawable/btn_rounded"/>

    <Button
        android:id="@+id/botonAlopobre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alopobreNombre"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/texto"
        android:background="@drawable/btn_rounded"/>

    <Button
        android:id="@+id/botonBarrosjarpa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barrosJarpaNombre"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/texto"
        android:background="@drawable/btn_rounded"/>

</LinearLayout>